Overflow bug fix
!

--- a/src/sass/base/_common.scss
+++ b/src/sass/base/_common.scss
@@ -2,6 +2,9 @@ body {
   font-family: $mainFont;
   font-size: $fontSizePrimaryMobile;
   color: $colorFont1;
+  &::-webkit-scrollbar {
+    display: none;
+  }
 }
 
 h1,
