--- a/src/sass/components/_modal.scss
+++ b/src/sass/components/_modal.scss
@@ -79,8 +79,8 @@
 @media screen and (min-width: 480px) {
   .modal {
     width: 450px;
+    overflow: scroll;
   }
-
 }
 
 @media screen and (min-width: 1200px) {
